--- a/Basic_HTML_and_CSS/Basic_HTML_3.html
+++ b/Basic_HTML_and_CSS/Basic_HTML_3.html
@@ -8,4 +8,15 @@
 		<h2>Good afternoon!</h2>
 		<h3 class="Class_A">Good night!</h3>
   </body>
+  <article>
+  <h4>Google chrome</h4>
+  <p>google chrome is a web browser devloped by google, relesed in 2008.Chrome 
+  is then worlds most popular web browser today!</p>
+  </article>
+  <details>
+    <Summary>Epcot center</summary>
+	<p>Epcot center is a theme park at disney world resort>/p>
+</details>
+<p>Open from <time> 10:00</time> to <time>21:00</time> every weekday.
+</p>
 </html>
