added another paragraph.

--- a/BasicHTML.html
+++ b/BasicHTML.html
@@ -9,6 +9,7 @@
 	    <header>
 		     <h4>Basic HTML Template</h4>
 		</header>
+		<p>added another paragraph</p>
 		<p>Introduction to basic HTML syntex.</p>
 	</body>
 </html>
