--- a/project/One_page_website/index.html
+++ b/project/One_page_website/index.html
@@ -5,6 +5,7 @@
 	    <title>The Space Station | Resort</title>
 		<link rel="stylesheet" href="shared.css">
 		<link rel="stylesheet" href="animation.css">
+		<link rel="stylesheet" href="one_page_website.css">
 	</head>
 	<body>
 
