--- a/project/One_page_website/one_page_website.html
+++ b/project/One_page_website/one_page_website.html
@@ -3,6 +3,7 @@
      <head>
 	    <meta charset="utf-8">
 		<title>Why you should adopt cats</title>
+		<link rel="stylesheet" href="one-page-website.css">
 	 </head>
 	 <body>
 	    <iframe width="560" height="315"
