fixed anchor tag

--- a/project/New_1 css.html
+++ b/project/New_1 css.html
@@ -2,8 +2,8 @@
 <html lang="en"
      <head>
          <meta charset="utf-8"
-         <title>CSS Drop-down Menu Demo</title>
-        <link rel="stylesheet" href="./css/menu_rollover.css">
+         <title>Basic HTML Template</title>
+        <link rel="stylesheet" href"./css/Basic_style.css>
       </head>
       <body>
 
@@ -15,15 +15,18 @@
                    <li>About</li>
                    <li>Portfolio
                        <ul class="submenu">
-                           <li>page 1</li>
-                           <li>page 2</li>
-                           <li>page 3</li>
-                           <li>page 4</li>
+                           <li>page</li>
+                           <li>page</li>
+                           <li>page</li>
+                           <li>page</li>
                        </ul>
                     </li>
                     <li>Contact</li>
                 </ul>
             </div>
-        </div>   
+        </div>
+
+
+        
      </body>
 </html> 
