--- a/project/One_page_website/debugging.html
+++ b/project/One_page_website/debugging.html
@@ -9,7 +9,7 @@
 
 <p><strong>I am a bold student of The Tech Academy.</strong></p>
 
-<p style="color: darkblue" href="https://www.learncodinganywhere.com/"><a><u> This is The Tech Academy's website.</u></a></p>
+<p style="color: darkblue" < a href="https://www.learncodinganywhere.com/"><u> This is The Tech Academy's website.</u></a></p>
 
 <img
 
