fixed debugging html

--- a/project/One_page_website/debugging.html
+++ b/project/One_page_website/debugging.html
@@ -1,15 +1,17 @@
 <html>
+    <head>
     <title>This is the Title</title>
     <link rel="stylesheet" href="debugging.css">
-<header><p style="color: darkblue">This is the Heading 1</header>
+</head>
+<h1 style="color: darkblue ">This is the Heading 1</h1>
 
 <body style=background-color:lightblue;>
 
-<h2><p style="color: darkblue">This is the Heading 2 element</h2>
+<h2 style="color:darkblue">This is the Heading 2 element</h2>
 
 <p><strong>I am a bold student of The Tech Academy.</strong></p>
 
-<p style="color: darkblue" < a href="https://www.learncodinganywhere.com/"><u> This is The Tech Academy's website.</u></a></p>
+<p style="color: darkblue" ><a href="https://www.learncodinganywhere.com/"><u> This is The Tech Academy's website.</u></a></p>
 
 <img
 
