--- a/BasicHTML.html
+++ b/BasicHTML.html
@@ -6,9 +6,6 @@
 		<meta name="author" content="alexander"
 	</head>
 	<body>
-	    <header>
-		     <h4>Basic HTML Template</h4>
-		</header>
-		<p>Introduction to basic HTML syntex.</p>
+	<img src="./img/download.jpg" alt="cat" class="center"
 	</body>
 </html>
