--- a/BasicHTML.html
+++ b/BasicHTML.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en"
+<html lang="en">
     <head>
+		<link rel="stylesheet" href="center.css"
 	    <title>Basic HTML</title>
 		<meta charset="utf-8"
 		<meta name="author" content="alexander"
 	</head>
 	<body>
-	<img src="./img/download.jpg" alt="cat" class="center"
+	<img src="./img/download.jpg" alt="cat" class="center">
 	</body>
 </html>
