--- a/bootstrap4_project/academy.cinemas.html
+++ b/bootstrap4_project/academy.cinemas.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <title>Academy Cinemas</title>
   </head>
@@ -40,48 +40,6 @@
             <div class="container">
               <h1 class="display-4 text-light">Academy Cinemas</h1>
               <p class="lead text-light">Sit back, relax, and enjoy the show...</p>
-            </div>
-          </div>
-
-          <div class="card mb-3">
-            <img src="./img/beautyandthebeast.jpg" class="card-img-top" alt="Beauty and the Beast">
-            <div class="card-body">
-              <h5 class="card-title">Beauty and the Beast</h5>
-              <p class="card-text">A selfish Prince is cursed to become a monster for the rest of his life, unless he learns to fall in love with a beautiful young woman he keeps prisoner.</p>
-              <span class="badge badge-pill badge-info">12:00 pm</span>
-              <span class="badge badge-pill badge-info">1:30 pm</span>
-              <span class="badge badge-pill badge-info">3:00 pm</span>
-              <span class="badge badge-pill badge-info">5:30 pm</span>
-              <span class="badge badge-pill badge-info">7:00 pm</span>
-              <span class="badge badge-pill badge-info">9:30 pm</span>
-            </div>
-          </div>
-
-          <div class="card mb-3">
-            <img src="./img/ghostintheshell.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Ghost in the Shell</h5>
-              <p class="card-text">In the near future, Major is the first of her kind: a human who is cyber-enhanced to be a perfect soldier devoted to stopping the world's most dangerous criminals. When terrorism reaches a new level that includes the ability to hack into people's minds and control them, Major is uniquely qualified to stop it. As she prepares to face a new enemy, Major discovers that her life was stolen instead of saved. Now, she will stop at nothing to recover her past while punishing those who did this to her.</p>
-              <span class="badge badge-pill badge-info">12:00 pm</span>
-              <span class="badge badge-pill badge-info">1:30 pm</span>
-              <span class="badge badge-pill badge-info">3:00 pm</span>
-              <span class="badge badge-pill badge-info">5:30 pm</span>
-              <span class="badge badge-pill badge-info">7:00 pm</span>
-              <span class="badge badge-pill badge-info">9:30 pm</span>
-            </div>
-          </div>
-
-          <div class="card mb-3">
-            <img src="./img/kongskullisland.jpg" class="card-img-top" class=asxz"w-50 p-3" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Kong:skull island</h5>
-              <p class="card-text">Scientists, soldiers and adventurers unite to explore a mythical, uncharted island in the Pacific Ocean. Cut off from everything they know, they venture into the domain of the mighty Kong, igniting the ultimate battle between man and nature. As their mission of discovery soon becomes one of survival, they must fight to escape from a primal world where humanity does not belong.</p>
-              <span class="badge badge-pill badge-info">12:00 pm</span>
-              <span class="badge badge-pill badge-info">1:30 pm</span>
-              <span class="badge badge-pill badge-info">3:00 pm</span>
-              <span class="badge badge-pill badge-info">5:30 pm</span>
-              <span class="badge badge-pill badge-info">7:00 pm</span>
-              <span class="badge badge-pill badge-info">9:30 pm</span>
             </div>
           </div>
 
@@ -123,6 +81,47 @@
 
           <!-- showtimes -->
 
+          <div class="card mb-3">
+            <img src="./img/beautyandthebeast.jpg" class="card-img-top" alt="Beauty and the Beast">
+            <div class="card-body">
+              <h5 class="card-title">Beauty and the Beast</h5>
+              <p class="card-text">A selfish Prince is cursed to become a monster for the rest of his life, unless he learns to fall in love with a beautiful young woman he keeps prisoner.</p>
+              <span class="badge badge-pill badge-info">12:00 pm</span>
+              <span class="badge badge-pill badge-info">1:30 pm</span>
+              <span class="badge badge-pill badge-info">3:00 pm</span>
+              <span class="badge badge-pill badge-info">5:30 pm</span>
+              <span class="badge badge-pill badge-info">7:00 pm</span>
+              <span class="badge badge-pill badge-info">9:30 pm</span>
+            </div>
+          </div>
+
+          <div class="card mb-3">
+            <img src="./img/ghostintheshell.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Ghost in the Shell</h5>
+              <p class="card-text">In the near future, Major is the first of her kind: a human who is cyber-enhanced to be a perfect soldier devoted to stopping the world's most dangerous criminals. When terrorism reaches a new level that includes the ability to hack into people's minds and control them, Major is uniquely qualified to stop it. As she prepares to face a new enemy, Major discovers that her life was stolen instead of saved. Now, she will stop at nothing to recover her past while punishing those who did this to her.</p>
+              <span class="badge badge-pill badge-info">12:00 pm</span>
+              <span class="badge badge-pill badge-info">1:30 pm</span>
+              <span class="badge badge-pill badge-info">3:00 pm</span>
+              <span class="badge badge-pill badge-info">5:30 pm</span>
+              <span class="badge badge-pill badge-info">7:00 pm</span>
+              <span class="badge badge-pill badge-info">9:30 pm</span>
+            </div>
+          </div>
+
+          <div class="card mb-3">
+            <img src="./img/kongskullisland.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Kong:skull island</h5>
+              <p class="card-text">Scientists, soldiers and adventurers unite to explore a mythical, uncharted island in the Pacific Ocean. Cut off from everything they know, they venture into the domain of the mighty Kong, igniting the ultimate battle between man and nature. As their mission of discovery soon becomes one of survival, they must fight to escape from a primal world where humanity does not belong.</p>
+              <span class="badge badge-pill badge-info">12:00 pm</span>
+              <span class="badge badge-pill badge-info">1:30 pm</span>
+              <span class="badge badge-pill badge-info">3:00 pm</span>
+              <span class="badge badge-pill badge-info">5:30 pm</span>
+              <span class="badge badge-pill badge-info">7:00 pm</span>
+              <span class="badge badge-pill badge-info">9:30 pm</span>
+            </div>
+          </div>
 
 
           <!-- /showtimes -->
@@ -157,7 +156,7 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
