--- a/project/One_page_website/index.html
+++ b/project/One_page_website/index.html
@@ -6,6 +6,8 @@
 		<link rel="stylesheet" href="shared.css">
 		<link rel="stylesheet" href="animation.css">
 		<link rel="stylesheet" href="one_page_website.css">
+		<link rel="stylesheet" href="css/lightbox.css">
+		<script src="JS/One_page.js"></script>
 	</head>
 	<body>
 
@@ -190,5 +192,66 @@
       </div>
 	  <!-- END FOOTER-->
 
+	  <!-- Images used to open the lightbox-->
+	  <div class="row">
+		<div class="column">
+			<img src="./images/Thumb/Thumbnail_1.jpg" onclick="openModel();currentSlides(1)" class="hover-
+			shadow">
+		</div>
+		<div class="column">
+			<img src="./images/Thumb/Thumbnail_2.jpg" onclick="openModel();currentSlides(2)" class="hover-
+			shadow">
+		</div>
+		<div class="column">
+			<img src="./images/Thumb/Thumbnail_3.jpg" onclick="openModel();currentSlides(3)" class="hover-
+			shadow">
+		</div>
+		<div class="column">
+			<img src="./images/Thumb/Thumbnail_4.jpg" onclick="openModel();currentSlides(4)" class="hover-
+			shadow">
+		</div>
+	  </div>
+     <!--Modal/lightbox-->
+	 <div id="myModal" class="modal">
+		<span class="close cursor" onclick="closeModal()">&times;</span>
+		<div class="modal-content">
+			<div class="mySlides">
+				<div class="numbertext">1 / 4</div>
+				<img src="./images/Thumb/Thumbnail_1.jpg" style="width:100%">
+			</div>
+			<div class="mySlides">
+				<div class="numbertext">2 / 4</div>
+				<img src="./images/Thumb/Thumbnail_2.jpg" style="width:100%">
+			</div>
+			<div class="mySlides">
+				<div class="numbertext">3 / 4</div>
+				<img src="./images/Thumb/Thumbnail_3.jpg" style="width:100%">
+			</div>
+			<div class="mySlides">
+				<div class="numbertext">4 / 4</div>
+				<img src="./images/Thumb/Thumbnail_4.jpg" style="width:100%">
+			</div>
+			<!--Next/previous controls-->
+			<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+			<a class="next" onclick="plusSlides(1)">&#10095;</a>
+			<!--Caption text-->
+			<div class="caption-container">
+				<p id="caption"></p>
+			</div>
+			<!--thumbnail image controls-->
+			<div class="column">
+				<img class="demo" src="./images/Thumb/Thumbnail_1.jpg" onclick="currentSlides(1)" alt="space">
+            </div>
+			<div class="column">
+				<img class="demo" src="./images/Thumb/Thumbnail_2.jpg" onclick="currentSlides(2)" alt="space">
+			</div>
+			<div class="column">
+				<img class="demo" src="./images/Thumb/Thumbnail_3.jpg" onclick="currentSlides(3)" alt="space">
+			</div>
+			<div class="column">
+				<img class="demo" src="./images/Thumb/Thumbnail_4.jpg" onclick="currentSlides(4)" alt="space">
+			</div>
+		</div>
+	 </div>
 	</body>
 </html>
