--- a/bootstrap4_project/academy.cinemas.html
+++ b/bootstrap4_project/academy.cinemas.html
@@ -126,6 +126,82 @@
 
           <!-- /showtimes -->
 
+          <!--jumbotron heading-->
+
+          <div class="jumbotron jumbotron-fluid bf-info mt-5 text-center">
+             <div class="container">
+              <h1 class="display-4 hidden-sm-down" style="color:btn-info;font-family:roboto;font-weight:900;text-transform:uppercase">
+              Movie Deals</h1>
+              <p class="lead">Check out our monthly deals...</p>
+              <!--movie deals-->
+              <button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#register">See our monthy movie deals</button>
+              <!--/movie deals-->
+             </div>
+          </div>
+          
+          <!--/jumbotron heading-->
+
+          <!--signup form-->
+          <div class="row">
+            <div class="container text-center col-ad-6" id="deals">
+              <div class="container text-center">
+                <h1 class="display-5 my-4 col-lg-auto text-primary">Stay current on movies!</h1>
+                <div class="input-group mb-5 input-group-sm">
+                  <input type="text" class="form-control" placeholder="Email">
+                  <span class="input-group-btn">
+                    <button type="button" class="btn btn-secondary btn-info .popover-dismiss" data-container="body" data-toggle="popover" data-placement="top" data-content="Submit your email to recieve great movie deals!">
+                      Sign up!</button>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+         <!--signup form-->
+
+         <!--form modal-->
+         <div class="modal" tabindex="-1" role="dialog" id="#register">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title">Register to recieve movie deals</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <form>
+                  <fieldset class="form-group">
+                    <label for="exampleInputEmail1">Email address</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                  </fieldset>
+                  <fieldset class="form-group">
+                    <label for="exampleInputPassword1">Password</label>
+                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                  </fieldset>
+                  <fieldset class="form-check">
+                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                  </fieldset>
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+
+
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
+         <!--/form modal-->
+
+
+
+
+
+
           <div class="text-center">
                <form>
                    <h1 id="deals"class="text-primary my-5">Sign up for Movie club Rewards</h1>
@@ -158,5 +234,10 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script>
+  $('.popover-dismiss').popover({
+  trigger: 'focus'
+  })
+</script>
   </body>
 </html>
