--- a/project/One_page_website/index.html
+++ b/project/One_page_website/index.html
@@ -197,24 +197,32 @@
 		<div class="column">
 			<img src="./images/Thumb/Thumbnail_1.jpg" onclick="openModel();currentSlides(1)" class="hover-
 			shadow">
+			<div class="photo-overlay">
+            </div>
 		</div>
 		<div class="column">
 			<img src="./images/Thumb/Thumbnail_2.jpg" onclick="openModel();currentSlides(2)" class="hover-
 			shadow">
+			<div class="photo-overlay">
+            </div>
 		</div>
 		<div class="column">
 			<img src="./images/Thumb/Thumbnail_3.jpg" onclick="openModel();currentSlides(3)" class="hover-
 			shadow">
+			<div class="photo-overlay">
+             </div>
 		</div>
 		<div class="column">
 			<img src="./images/Thumb/Thumbnail_4.jpg" onclick="openModel();currentSlides(4)" class="hover-
 			shadow">
+			<div class="photo-overlay">
+             </div>
 		</div>
 	  </div>
      <!--Modal/lightbox-->
-	 <div id="myModal" class="modal">
-		<span class="close cursor" onclick="closeModal()">&times;</span>
-		<div class="modal-content">
+	 <div id="myModel" class="model">
+		<span class="close cursor" onclick="closeModel()">&times;</span>
+		<div class="model-content">
 			<div class="mySlides">
 				<div class="numbertext">1 / 4</div>
 				<img src="./images/Thumb/Thumbnail_1.jpg" style="width:100%">
