--- a/project/One_page_website/index.html
+++ b/project/One_page_website/index.html
@@ -43,7 +43,8 @@
 				   <div class="photo-container">
                       <div class="photo">
 					       <img src="./images/Thumb/Thumbnail_1.jpg" alt="">
-						   <div class="photo-overlay">
+						   <div class="photo-overlay"
+						   onclick="openModel();currentSlides(1)">
 							   <h3>Click to Enlage</h3>
 							   <p>We have several space launches departing daily, book flight today!</p>
 						   </div>
@@ -55,7 +56,8 @@
 				   <div class="photo-container">
 					<div class="photo">
 						 <img src="./images/Thumb/Thumbnail_2.jpg" alt="">
-						 <div class="photo-overlay">
+						 <div class="photo-overlay"
+						 onclick="openModel();currentSlides(2)">
 							 <h3>Click to Enlage</h3>
 							 <p>We have several space launches departing daily, book flight today!</p>
 						 </div>
@@ -67,7 +69,8 @@
 				 <div class="photo-container">
 					<div class="photo">
 						 <img src="./images/Thumb/Thumbnail_3.jpg" alt="">
-						 <div class="photo-overlay">
+						 <div class="photo-overlay"
+						 onclick="openModel();currentSlides(3)">
 							 <h3>Click to Enlage</h3>
 							 <p>We have several space launches departing daily, book flight today!</p>
 						 </div>
@@ -79,7 +82,8 @@
 				 <div class="photo-container">
 					<div class="photo">
 						 <img src="./images/Thumb/Thumbnail_4.jpg" alt="">
-						 <div class="photo-overlay">
+						 <div class="photo-overlay"
+						 onclick="openModel();currentSlides(4)">
 							 <h3>Click to Enlage</h3>
 							 <p>We have several space launches departing daily, book flight today!</p>
 						 </div>
@@ -91,7 +95,8 @@
 				 <div class="photo-container">
 					<div class="photo">
 						 <img src="./images/Thumb/Thumbnail_5.jpg" alt="">
-						 <div class="photo-overlay">
+						 <div class="photo-overlay"
+						 onclick="openModel();currentSlides(5)">
 							 <h3>Click to Enlage</h3>
 							 <p>We have several space launches departing daily, book flight today!</p>
 						 </div>
@@ -103,7 +108,8 @@
 				 <div class="photo-container">
 					<div class="photo">
 						 <img src="./images/Thumb/Thumbnail_6.jpg" alt="">
-						 <div class="photo-overlay">
+						 <div class="photo-overlay"
+						 onclick="openModel();currentSlides(6)">
 							 <h3>Click to Enlage</h3>
 							 <p>We have several space launches departing daily, book flight today!</p>
 						 </div>
@@ -115,7 +121,8 @@
 				 <div class="photo-container">
 					<div class="photo">
 						 <img src="./images/Thumb/Thumbnail_7.jpg" alt="">
-						 <div class="photo-overlay">
+						 <div class="photo-overlay"
+						 onclick="openModel();currentSlides(7)">
 							 <h3>Click to Enlage</h3>
 							 <p>We have several space launches departing daily, book flight today!</p>
 						 </div>
@@ -127,7 +134,8 @@
 				 <div class="photo-container">
 					<div class="photo">
 						 <img src="./images/Thumb/Thumbnail_8.jpg" alt="">
-						 <div class="photo-overlay">
+						 <div class="photo-overlay"
+						 onclick="openModel();currentSlides(8)">
 							 <h3>Click to Enlage</h3>
 							 <p>We have several space launches departing daily, book flight today!</p>
 						 </div>
@@ -139,7 +147,8 @@
 				 <div class="photo-container">
 					<div class="photo">
 						 <img src="./images/Thumb/Thumbnail_9.jpg" alt="">
-						 <div class="photo-overlay">
+						 <div class="photo-overlay"
+						 onclick="openModel();currentSlides(9)">
 							 <h3>Click to Enlage</h3>
 							 <p>We have several space launches departing daily, book flight today!</p>
 						 </div>
@@ -197,25 +206,29 @@
 		<div class="column">
 			<img src="./images/Thumb/Thumbnail_1.jpg" onclick="openModel();currentSlides(1)" class="hover-
 			shadow">
-			<div class="photo-overlay">
+			<div class="photo-overlay"
+			onclick="openModel();currentSlides(1)">
             </div>
 		</div>
 		<div class="column">
 			<img src="./images/Thumb/Thumbnail_2.jpg" onclick="openModel();currentSlides(2)" class="hover-
 			shadow">
-			<div class="photo-overlay">
+			<div class="photo-overlay"
+			onclick="openModel();currentSlides(2)">
             </div>
 		</div>
 		<div class="column">
 			<img src="./images/Thumb/Thumbnail_3.jpg" onclick="openModel();currentSlides(3)" class="hover-
 			shadow">
-			<div class="photo-overlay">
+			<div class="photo-overlay"
+			onclick="openModel();currentSlides(3)">
              </div>
 		</div>
 		<div class="column">
 			<img src="./images/Thumb/Thumbnail_4.jpg" onclick="openModel();currentSlides(4)" class="hover-
 			shadow">
-			<div class="photo-overlay">
+			<div class="photo-overlay"
+			onclick="openModel();currentSlides(4)">
              </div>
 		</div>
 	  </div>
